# GreenHouseSim

./: .gitignore  CMakeLists.txt  README.md  script_to_be.txt
Diagrams/: .~lock.Airflow_Model.odg#  Airflow_Model.odg  Domain_Model.odg
Visuals/: main.cpp
include/: Aircon.hpp  Airflow.hpp  Greenhouse.hpp
src/: Aircon.cpp  Airflow.cpp  Greenhouse.cpp  main.cpp
